name:                lastresort
version:             0.1.0.0
synopsis:            Entry into PLT Games December 2012 ("Turing Tarpit")
homepage:            http://www.pltgames.com/competition/2012/12
license:             MIT
license-file:        LICENSE.txt
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Language
build-type:          Simple
cabal-version:       >=1.8
executable lastresort
  main-is:             Main.hs
  build-depends:       base ==4.5.*, parsec ==3.1.*
